# efgl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py  setup.spec
Renderer/: Renderer.sln
Renderer/Renderer/: Class.cpp  Renderer.cpp  Renderer.vcxproj  Renderer.vcxproj.filters  glad.c  pch.h
Renderer/Renderer/include/: Class.h
Renderer/Sandbox/: Sandbox.vcxproj  main.cpp
Sandbox/: imgui.ini
Sandbox/shaders/: shader.glsl
Sandbox/src/: SubdivisionDemo.h  common.h  main.cpp
bin-int/Debug-windows-x86_64/efgl/: efgl.vcxproj.FileListAbsolute.txt
efgl/: imgui.ini
efgl/Sandbox/: results.json
efgl/Sandbox/src/: common.h  main.cpp
efgl/efgl/src/: Application.cpp  Application.h  Camera.h  ComputeShader.cpp  Core.h  Profile.h  Shader.cpp  Shader.h  api.h  efgl.h  efpch.cpp  efpch.h
efgl/shaders/: checkers.glsl  depth_pass.glsl  gooch.glsl  phong.glsl  screen_quad.glsl
efgl/shaders/compute/: compress_active_clusters.comp  cull_clusters.comp  cull_lights.comp  gen_aabb.comp
efgl/shaders/debug/: aabb_visualization.glsl  depth_texture.glsl  lightbulb.glsl  lights_per_cluster.glsl  pbr_demo.glsl  subdivision_demo.glsl
efgl/src/: Application.cpp  Application.h  ComputeShader.cpp  ComputeShader.h  InputManager.cpp  InputManager.h  Shader.cpp  Shader.h  Window.cpp  Window.h  efpch.cpp  efpch.h  main.cpp
efgl/src/application/: Application.cpp  InputManager.cpp  InputManager.h  ManyLightsDemo.h  SubdivisionDemo.h
include/glad/: glad.h
progress/efgl/: imgui.ini
setup/: fetch.py  make_exec.py  premake5.lua  setup.py
(+181 files in other folders)
